// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProfilePage AsideContent matches snapshot 1`] = `
<div
  className="asideContent"
>
  <div
    className="largeAvatar avatar"
    title="test-user display name"
  >
    <span
      className="initialsLarge"
    >
      TT
    </span>
  </div>
  <h1
    className="h1 mobileHeading"
  >
    <span>
      ProfilePage.mobileHeading
    </span>
  </h1>
</div>
`;

exports[`ProfilePage DesktopReviews matches snapshot 1`] = `
<div
  className="desktopReviews"
>
  <div
    className="desktopReviewsWrapper"
  >
    <ButtonTabNavHorizontal
      className="desktopReviewsTabNav"
      rootClassName={null}
      skin="light"
      tabClassName={null}
      tabRootClassName={null}
      tabs={
        Array [
          Object {
            "onClick": [Function],
            "selected": true,
            "text": <Heading
              as="h3"
              className={null}
              rootClassName="desktopReviewsTitle"
            >
              <Memo(MemoizedFormattedMessage)
                id="ProfilePage.reviewsFromMyCustomersTitle"
                values={
                  Object {
                    "count": 0,
                  }
                }
              />
            </Heading>,
          },
          Object {
            "onClick": [Function],
            "selected": false,
            "text": <Heading
              as="h3"
              className={null}
              rootClassName="desktopReviewsTitle"
            >
              <Memo(MemoizedFormattedMessage)
                id="ProfilePage.reviewsAsACustomerTitle"
                values={
                  Object {
                    "count": 0,
                  }
                }
              />
            </Heading>,
          },
        ]
      }
    />
    <ReviewsErrorMaybe
      queryReviewsError={null}
    />
    <injectIntl(ReviewsComponent)
      reviews={Array []}
    />
  </div>
</div>
`;

exports[`ProfilePage MainContent matches snapshot 1`] = `
<div>
  <H2
    as="h1"
    className="desktopHeading"
    rootClassName={null}
  >
    <MemoizedFormattedMessage
      id="ProfilePage.desktopHeading"
      values={
        Object {
          "name": "john doe",
        }
      }
    />
  </H2>
  <p
    className="bio"
  >
    Lorem ipsum
  </p>
  <DesktopReviews
    queryReviewsError={null}
    reviews={Array []}
  />
</div>
`;

exports[`ProfilePage MobileReviews matches snapshot 1`] = `
<div
  className="mobileReviews"
>
  <H4
    as="h2"
    className="mobileReviewsTitle"
    rootClassName={null}
  >
    <MemoizedFormattedMessage
      id="ProfilePage.reviewsFromMyCustomersTitle"
      values={
        Object {
          "count": 0,
        }
      }
    />
  </H4>
  <ReviewsErrorMaybe
    queryReviewsError={null}
  />
  <injectIntl(ReviewsComponent)
    reviews={Array []}
  />
  <H4
    as="h2"
    className="mobileReviewsTitle"
    rootClassName={null}
  >
    <MemoizedFormattedMessage
      id="ProfilePage.reviewsAsACustomerTitle"
      values={
        Object {
          "count": 0,
        }
      }
    />
  </H4>
  <ReviewsErrorMaybe
    queryReviewsError={null}
  />
  <injectIntl(ReviewsComponent)
    reviews={Array []}
  />
</div>
`;

exports[`ProfilePage ReviewsErrorMaybe matches snapshot 1`] = `
<p
  className="error"
>
  <span>
    ProfilePage.loadingReviewsFailed
  </span>
</p>
`;
